--- a/Add-on course/lsn-2.html
+++ b/Add-on course/lsn-2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>lsn-2.html</title>
   <style>
     .req-button{
       background-color: black;
